parallel coordinates loading

--- a/CPIV/index.html
+++ b/CPIV/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>CPIIII</title>
+  <title>CPIV</title>
   <script src="https://d3js.org/d3.v7.js"></script>
 </head>
 
-<div id="vi1"></div>
+<div id="parallelCoordinates"></div>
 
 <script src="script.js"></script>
 
