--- a/CPIV/treemap/index.html
+++ b/CPIV/treemap/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>CPIV</title>
-  <script src="https://d3js.org/d3.v6.js"></script>
-</head>
-
-<div id="treemap"></div>
-
-<script src="script.js"></script>
-
+  <head> 
+    <meta charset="UTF-8" />
+    <title>Hierarchy Boilterplate</title>
+    <script src="script.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+  </head>
+  <body onload="init()">
+    <div>
+      <div style="width: 50%; float: left"><svg id="treemap"></svg></div>
+    </div>
+  </body>
 </html>
