--- a/CPIV/par_coords/index.html
+++ b/CPIV/par_coords/index.html
@@ -6,7 +6,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" type="text/css" href="parallel.css" />
   </head>
-  <body>
+
   <div id="header">
     <h1>Nutrition Explorer</h1>
     <div class="controls">
@@ -16,18 +16,105 @@
     </div>
     <div style="clear:both;"></div>
   </div>
-  <div id="chart">
-    <canvas id="background"></canvas>
-    <canvas id="foreground"></canvas>
-    <canvas id="highlight"></canvas>
-    <svg></svg>
-  </div>
-  <div id="list" class="list">
-      <h3>Sample of 25 entries <input type="text" id="search" placeholder="Search Foods..."></input></h3>
-      <p id="food-list">
-      </p>
-  </div>
+  
+  <body onload="init()">
+    <div>
+      <!-- PARALLEL COORDINATES -->
+      <div style="width: 80%; float: left">
+        <div id="parCoords">
+          <canvas id="background"></canvas>
+          <canvas id="foreground"></canvas>
+          <canvas id="highlight"></canvas>
+          <svg style="position: relative; top: 0; left: 0; float: left;"></svg>
+          <!-- <svg></svg> -->
+        </div>
+      </div>
+      <!-- LIST -->
+      <div style="width: 20%; float: left">
+        <div id="list" class="list" style="width: 80%; float: left">
+            <h3>Sample of 20 items <input type="text" id="search" placeholder="Search Foods..."></input></h3>
+            <p id="food-list"></p>
+        </div>
+      </div>
+    </div>
+    <hr style="height: 0.3%; width:90%; color:lightgray; background-color:lightgray; text-align:center;">
+    <div> 
+      <!-- TREEMAP -->
+      <div style="width: 82%; float: left"><div id="treemap"></div></div>
+      <!-- CALORIES JITTER -->
+      <div style="width: 18%; float: left; text-align: left;">
+          <div style="position: relative; left: -5px; top: 60px;">
+              <div id="jitterPlot-calories"></div>
+              <div style="width: 70%; text-align: right;">
+                  <select name="category-compare-calories" id="category-compare-calories">
+                      <option value="Meat">Meat</option>
+                      <option value="Fish" selected="selected">Fish</option>
+                      <option value="Dairy">Dairy</option>
+                      <option value="Oils">Oils</option>
+                  </select>
+              </div>
+          </div>
+      </div>
+      <div style="width: 93.5%; float: left; text-align: right;"></div>
+    </div>
+    <div>
+        <!-- FAT JITTER -->
+        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-fat"></div></div>
+        <!-- PROTEIN JITTER -->
+        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-protein"></div></div>
+        <!-- CARBOHYDRATES JITTER -->
+        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-carbohydrates"></div></div>
+        <!-- SODIUM JITTER -->
+        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-sodium"></div></div>
+        <!-- POTASSIUM JITTER -->
+        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-potassium"></div></div>
+    </div>
+    <div>
+        <div style="width: 15%; float: left; text-align: right;">
+            <select name="category-compare-fat" id="category-compare-fat">
+                <option value="Meat">Meat</option>
+                <option value="Fish" selected="selected">Fish</option>
+                <option value="Dairy">Dairy</option>
+                <option value="Oils">Oils</option>
+            </select>
+        </div>
+        <div style="width: 20%; float: left; text-align: right;">
+            <select name="category-compare-protein" id="category-compare-protein">
+                <option value="Meat">Meat</option>
+                <option value="Fish" selected="selected" >Fish</option>
+                <option value="Dairy">Dairy</option>
+                <option value="Oils">Oils</option>
+            </select>
+      </div>
+      <div style="width: 20%; float: left; text-align: right;">
+          <select name="category-compare-carbohydrates" id="category-compare-carbohydrates">
+              <option value="Meat">Meat</option>
+              <option value="Fish" selected="selected">Fish</option>
+              <option value="Dairy">Dairy</option>
+              <option value="Oils">Oils</option>
+          </select>
+      </div>
+      <div style="width: 20%; float: left; text-align: right;">
+          <select name="category-compare-sodium" id="category-compare-sodium">
+              <option value="Meat">Meat</option>
+              <option value="Fish" selected="selected">Fish</option>
+              <option value="Dairy">Dairy</option>
+              <option value="Oils">Oils</option>
+          </select>
+      </div>
+      <div style="width: 20%; float: left; text-align: right;">
+          <select name="category-compare-potassium" id="category-compare-potassium">
+              <option value="Meat">Meat</option>
+              <option value="Fish" selected="selected">Fish</option>
+              <option value="Dairy">Dairy</option>
+              <option value="Oils">Oils</option>
+          </select>
+      </div>
+    </div>
+    <hr style="height: 0.5%; width:80%; text-align:center;">
   </body>
+
   <script src="http://underscorejs.org/underscore.js"></script>
   <script src="parallel.js"></script>
+
 </html>
