pre CPIV delivery

--- a/CPIV/par_coords/index.html
+++ b/CPIV/par_coords/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>Nutrient Database Explorer</title>
+    <title>Nutrition Database Explorer</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="parallel.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <div id="header">
@@ -45,11 +45,17 @@
       <div style="width: 18%; float: left; text-align: left;">
           <div style="position: relative; left: -5px; top: 60px;">
               <div id="jitterPlot-calories"></div>
-              <div style="width: 70%; text-align: right;">
-                  <select name="category-compare-calories" id="category-compare-calories">
+              <div style="width: 80%; text-align: right;">
+                  <select name="category-compare-calories" id="category-compare-calories" style="text-align: center;">
                       <option value="Meat">Meat</option>
-                      <option value="Fish" selected="selected">Fish</option>
+                      <option value="Vegetables">Vegetables</option>
                       <option value="Dairy">Dairy</option>
+                      <option value="Fish" selected="selected">Fish</option>
+                      <option value="Fruits">Fruits</option>
+                      <option value="Others">Others</option>
+                      <option value="Starchy food">Starchy food</option>
+                      <option value="Fast food">Fast food</option>
+                      <option value="Beverages">Beverages</option>
                       <option value="Oils">Oils</option>
                   </select>
               </div>
@@ -59,11 +65,11 @@
     </div>
     <div>
         <!-- FAT JITTER -->
-        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-fat"></div></div>
+        <div style="width: 18%; text-align: center; float: left"><div id="jitterPlot-fat"></div></div>
         <!-- PROTEIN JITTER -->
-        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-protein"></div></div>
+        <div style="width: 21%; text-align: center; float: left"><div id="jitterPlot-protein"></div></div>
         <!-- CARBOHYDRATES JITTER -->
-        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-carbohydrates"></div></div>
+        <div style="width: 21%; text-align: center; float: left"><div id="jitterPlot-carbohydrates"></div></div>
         <!-- SODIUM JITTER -->
         <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-sodium"></div></div>
         <!-- POTASSIUM JITTER -->
@@ -71,50 +77,80 @@
     </div>
     <div>
         <div style="width: 15%; float: left; text-align: right;">
-            <select name="category-compare-fat" id="category-compare-fat">
-                <option value="Meat">Meat</option>
-                <option value="Fish" selected="selected">Fish</option>
-                <option value="Dairy">Dairy</option>
-                <option value="Oils">Oils</option>
+            <select name="category-compare-fat" id="category-compare-fat" style="text-align: center;">
+              <option value="Meat">Meat</option>
+              <option value="Vegetables">Vegetables</option>
+              <option value="Dairy">Dairy</option>
+              <option value="Fish" selected="selected">Fish</option>
+              <option value="Fruits">Fruits</option>
+              <option value="Others">Others</option>
+              <option value="Starchy food">Starchy food</option>
+              <option value="Fast food">Fast food</option>
+              <option value="Beverages">Beverages</option>
+              <option value="Oils">Oils</option>
             </select>
         </div>
         <div style="width: 20%; float: left; text-align: right;">
-            <select name="category-compare-protein" id="category-compare-protein">
-                <option value="Meat">Meat</option>
-                <option value="Fish" selected="selected" >Fish</option>
-                <option value="Dairy">Dairy</option>
-                <option value="Oils">Oils</option>
+            <select name="category-compare-protein" id="category-compare-protein" style="text-align: center;">
+              <option value="Meat">Meat</option>
+              <option value="Vegetables">Vegetables</option>
+              <option value="Dairy">Dairy</option>
+              <option value="Fish" selected="selected">Fish</option>
+              <option value="Fruits">Fruits</option>
+              <option value="Others">Others</option>
+              <option value="Starchy food">Starchy food</option>
+              <option value="Fast food">Fast food</option>
+              <option value="Beverages">Beverages</option>
+              <option value="Oils">Oils</option>
             </select>
       </div>
-      <div style="width: 20%; float: left; text-align: right;">
-          <select name="category-compare-carbohydrates" id="category-compare-carbohydrates">
-              <option value="Meat">Meat</option>
-              <option value="Fish" selected="selected">Fish</option>
-              <option value="Dairy">Dairy</option>
-              <option value="Oils">Oils</option>
+      <div style="width: 21.5%; float: left; text-align: right">
+          <select name="category-compare-carbohydrates" id="category-compare-carbohydrates" style="text-align: center;">
+            <option value="Meat">Meat</option>
+            <option value="Vegetables">Vegetables</option>
+            <option value="Dairy">Dairy</option>
+            <option value="Fish" selected="selected">Fish</option>
+            <option value="Fruits">Fruits</option>
+            <option value="Others">Others</option>
+            <option value="Starchy food">Starchy food</option>
+            <option value="Fast food">Fast food</option>
+            <option value="Beverages">Beverages</option>
+            <option value="Oils">Oils</option>
           </select>
       </div>
       <div style="width: 20%; float: left; text-align: right;">
-          <select name="category-compare-sodium" id="category-compare-sodium">
-              <option value="Meat">Meat</option>
-              <option value="Fish" selected="selected">Fish</option>
-              <option value="Dairy">Dairy</option>
-              <option value="Oils">Oils</option>
+          <select name="category-compare-sodium" id="category-compare-sodium" style="text-align: center;">
+            <option value="Meat">Meat</option>
+            <option value="Vegetables">Vegetables</option>
+            <option value="Dairy">Dairy</option>
+            <option value="Fish" selected="selected">Fish</option>
+            <option value="Fruits">Fruits</option>
+            <option value="Others">Others</option>
+            <option value="Starchy food">Starchy food</option>
+            <option value="Fast food">Fast food</option>
+            <option value="Beverages">Beverages</option>
+            <option value="Oils">Oils</option>
           </select>
       </div>
       <div style="width: 20%; float: left; text-align: right;">
-          <select name="category-compare-potassium" id="category-compare-potassium">
-              <option value="Meat">Meat</option>
-              <option value="Fish" selected="selected">Fish</option>
-              <option value="Dairy">Dairy</option>
-              <option value="Oils">Oils</option>
+          <select name="category-compare-potassium" id="category-compare-potassium" style="text-align: center;">
+            <option value="Meat">Meat</option>
+            <option value="Vegetables">Vegetables</option>
+            <option value="Dairy">Dairy</option>
+            <option value="Fish" selected="selected">Fish</option>
+            <option value="Fruits">Fruits</option>
+            <option value="Others">Others</option>
+            <option value="Starchy food">Starchy food</option>
+            <option value="Fast food">Fast food</option>
+            <option value="Beverages">Beverages</option>
+            <option value="Oils">Oils</option>
           </select>
       </div>
     </div>
-    <hr style="height: 0.5%; width:80%; text-align:center;">
+    <hr style="height: 0.3%; width:90%; text-align:center;">
   </body>
 
   <script src="http://underscorejs.org/underscore.js"></script>
-  <script src="parallel.js"></script>
+  <script src="script.js"></script>
 
 </html>
