--- a/CPIV/par_coords/index.html
+++ b/CPIV/par_coords/index.html
@@ -29,15 +29,8 @@
           <!-- <svg></svg> -->
         </div>
       </div>
-      <!-- LIST -->
-      <div style="width: 20%; float: left">
-        <div id="list" class="list" style="width: 80%; float: left">
-            <h3>Sample of 20 items <input type="text" id="search" placeholder="Search Foods..."></input></h3>
-            <p id="food-list"></p>
-        </div>
-      </div>
     </div>
-    <hr style="height: 0.3%; width:90%; color:lightgray; background-color:lightgray; text-align:center;">
+    <hr style="height: 0.3%; width:90%; color:lightgray; background-color:lightgray; text-align:left;">
     <div> 
       <!-- TREEMAP -->
       <div style="width: 82%; float: left"><div id="treemap"></div></div>
@@ -45,20 +38,6 @@
       <div style="width: 18%; float: left; text-align: left;">
           <div style="position: relative; left: -5px; top: 60px;">
               <div id="jitterPlot-calories"></div>
-              <div style="width: 80%; text-align: right;">
-                  <select name="category-compare-calories" id="category-compare-calories" style="text-align: center;">
-                      <option value="Meat">Meat</option>
-                      <option value="Vegetables">Vegetables</option>
-                      <option value="Dairy">Dairy</option>
-                      <option value="Fish" selected="selected">Fish</option>
-                      <option value="Fruits">Fruits</option>
-                      <option value="Others">Others</option>
-                      <option value="Starchy food">Starchy food</option>
-                      <option value="Fast food">Fast food</option>
-                      <option value="Beverages">Beverages</option>
-                      <option value="Oils">Oils</option>
-                  </select>
-              </div>
           </div>
       </div>
       <div style="width: 93.5%; float: left; text-align: right;"></div>
@@ -74,78 +53,6 @@
         <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-sodium"></div></div>
         <!-- POTASSIUM JITTER -->
         <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-potassium"></div></div>
-    </div>
-    <div>
-        <div style="width: 15%; float: left; text-align: right;">
-            <select name="category-compare-fat" id="category-compare-fat" style="text-align: center;">
-              <option value="Meat">Meat</option>
-              <option value="Vegetables">Vegetables</option>
-              <option value="Dairy">Dairy</option>
-              <option value="Fish" selected="selected">Fish</option>
-              <option value="Fruits">Fruits</option>
-              <option value="Others">Others</option>
-              <option value="Starchy food">Starchy food</option>
-              <option value="Fast food">Fast food</option>
-              <option value="Beverages">Beverages</option>
-              <option value="Oils">Oils</option>
-            </select>
-        </div>
-        <div style="width: 20%; float: left; text-align: right;">
-            <select name="category-compare-protein" id="category-compare-protein" style="text-align: center;">
-              <option value="Meat">Meat</option>
-              <option value="Vegetables">Vegetables</option>
-              <option value="Dairy">Dairy</option>
-              <option value="Fish" selected="selected">Fish</option>
-              <option value="Fruits">Fruits</option>
-              <option value="Others">Others</option>
-              <option value="Starchy food">Starchy food</option>
-              <option value="Fast food">Fast food</option>
-              <option value="Beverages">Beverages</option>
-              <option value="Oils">Oils</option>
-            </select>
-      </div>
-      <div style="width: 21.5%; float: left; text-align: right">
-          <select name="category-compare-carbohydrates" id="category-compare-carbohydrates" style="text-align: center;">
-            <option value="Meat">Meat</option>
-            <option value="Vegetables">Vegetables</option>
-            <option value="Dairy">Dairy</option>
-            <option value="Fish" selected="selected">Fish</option>
-            <option value="Fruits">Fruits</option>
-            <option value="Others">Others</option>
-            <option value="Starchy food">Starchy food</option>
-            <option value="Fast food">Fast food</option>
-            <option value="Beverages">Beverages</option>
-            <option value="Oils">Oils</option>
-          </select>
-      </div>
-      <div style="width: 20%; float: left; text-align: right;">
-          <select name="category-compare-sodium" id="category-compare-sodium" style="text-align: center;">
-            <option value="Meat">Meat</option>
-            <option value="Vegetables">Vegetables</option>
-            <option value="Dairy">Dairy</option>
-            <option value="Fish" selected="selected">Fish</option>
-            <option value="Fruits">Fruits</option>
-            <option value="Others">Others</option>
-            <option value="Starchy food">Starchy food</option>
-            <option value="Fast food">Fast food</option>
-            <option value="Beverages">Beverages</option>
-            <option value="Oils">Oils</option>
-          </select>
-      </div>
-      <div style="width: 20%; float: left; text-align: right;">
-          <select name="category-compare-potassium" id="category-compare-potassium" style="text-align: center;">
-            <option value="Meat">Meat</option>
-            <option value="Vegetables">Vegetables</option>
-            <option value="Dairy">Dairy</option>
-            <option value="Fish" selected="selected">Fish</option>
-            <option value="Fruits">Fruits</option>
-            <option value="Others">Others</option>
-            <option value="Starchy food">Starchy food</option>
-            <option value="Fast food">Fast food</option>
-            <option value="Beverages">Beverages</option>
-            <option value="Oils">Oils</option>
-          </select>
-      </div>
     </div>
     <hr style="height: 0.3%; width:90%; text-align:center;">
   </body>
