--- a/CPIV/par_coords/index.html
+++ b/CPIV/par_coords/index.html
@@ -8,11 +8,16 @@
   </head>
 
   <div id="header">
-    <h1>Nutrition Explorer</h1>
-    <div class="controls">
+    <div style="width: 20%; float: left">
+      <h1>Nutrition Explorer</h1>
+    </div>
+    <div class="controls" style="width: 54%; text-align: right" >
       <strong id="rendered-count"></strong>/<strong id="data-count"></strong>
       <div class="fillbar"><div id="selected-bar"><div id="rendered-bar">&nbsp;</div></div></div>
       Lines at <strong id="opacity"></strong> opacity.
+    </div>
+    <div style="width: 26%; float: left; text-align: center">
+      <h2>Categories</h2>
     </div>
     <div style="clear:both;"></div>
   </div>
@@ -20,7 +25,7 @@
   <body onload="init()">
     <div>
       <!-- PARALLEL COORDINATES -->
-      <div style="width: 80%; float: left">
+      <div style="width: 72%; float: left">
         <div id="parCoords">
           <canvas id="background"></canvas>
           <canvas id="foreground"></canvas>
@@ -28,33 +33,32 @@
           <svg style="position: relative; top: 0; left: 0; float: left;"></svg>
           <!-- <svg></svg> -->
         </div>
+        <hr style="height: 0.4%; width:95%; color:lightgray; background-color:lightgray; text-align:left;">
+        <div>
+          <!-- CALORIES JITTER -->
+          <div class="jitter_container" style="width: 33%; text-align: center; float: left"><div id="jitterPlot-calories"></div></div>
+          <!-- FAT JITTER -->
+          <div class="jitter_container" style="width: 33%; text-align: center; float: left"><div id="jitterPlot-fat"></div></div>
+          <!-- PROTEIN JITTER -->
+          <div class="jitter_container" style="width: 33%; text-align: center; float: left"><div id="jitterPlot-protein"></div></div>
+        </div>
+        <div>
+          <!-- CARBOHYDRATES JITTER -->
+          <div class="jitter_container" style="width: 33%; text-align: center; float: left"><div id="jitterPlot-carbohydrates"></div></div>
+          <!-- SODIUM JITTER -->
+          <div class="jitter_container" style="width: 33%; text-align: center; float: left"><div id="jitterPlot-sodium"></div></div>
+          <!-- POTASSIUM JITTER -->
+          <div class="jitter_container" style="width: 33%; text-align: center; float: left"><div id="jitterPlot-potassium"></div></div>
+        </div>
+        <hr style="height: 0.4%; width:95%; color:lightgray; background-color:lightgray; text-align:left;">
       </div>
-    </div>
-    <hr style="height: 0.3%; width:90%; color:lightgray; background-color:lightgray; text-align:left;">
-    <div> 
+      
       <!-- TREEMAP -->
-      <div style="width: 82%; float: left"><div id="treemap"></div></div>
-      <!-- CALORIES JITTER -->
-      <div style="width: 18%; float: left; text-align: left;">
-          <div style="position: relative; left: -5px; top: 60px;">
-              <div id="jitterPlot-calories"></div>
-          </div>
+      <div style="width: 20%; float: left; text-align: left;">
+        <div id="treemap"></div>
       </div>
-      <div style="width: 93.5%; float: left; text-align: right;"></div>
     </div>
-    <div>
-        <!-- FAT JITTER -->
-        <div style="width: 18%; text-align: center; float: left"><div id="jitterPlot-fat"></div></div>
-        <!-- PROTEIN JITTER -->
-        <div style="width: 21%; text-align: center; float: left"><div id="jitterPlot-protein"></div></div>
-        <!-- CARBOHYDRATES JITTER -->
-        <div style="width: 21%; text-align: center; float: left"><div id="jitterPlot-carbohydrates"></div></div>
-        <!-- SODIUM JITTER -->
-        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-sodium"></div></div>
-        <!-- POTASSIUM JITTER -->
-        <div style="width: 20%; text-align: center; float: left"><div id="jitterPlot-potassium"></div></div>
-    </div>
-    <hr style="height: 0.3%; width:90%; text-align:center;">
+    <div> 
   </body>
 
   <script src="http://underscorejs.org/underscore.js"></script>
