treemap, jitter filtering parCoords; parCoords filtering jitters

--- a/CPIV/src/index.html
+++ b/CPIV/src/index.html
@@ -25,11 +25,11 @@
   <body onload="init()">
     <div>
       <!-- PARALLEL COORDINATES -->
-      <div style="width: 72%; float: left">
+      <div style="width: 74%; float: left">
         <div id="parCoords">
-          <canvas id="background"></canvas>
+          <!-- <canvas id="background"></canvas> -->
           <canvas id="foreground"></canvas>
-          <canvas id="highlight"></canvas>
+          <!-- <canvas id="highlight"></canvas> -->
           <svg style="position: relative; top: 0; left: 0; float: left;"></svg>
           <!-- <svg></svg> -->
         </div>
@@ -54,7 +54,7 @@
       </div>
       
       <!-- TREEMAP -->
-      <div style="width: 20%; float: left; text-align: left;">
+      <div style="width: 26%; float: left; text-align: left;">
         <div id="treemap"></div>
       </div>
     </div>
