--- a/CPIV/src/index.html
+++ b/CPIV/src/index.html
@@ -9,7 +9,7 @@
 
   <div id="header">
     <div style="width: 20%; float: left">
-      <h1>Nutrition Analyzer</h1>
+      <h1>Nutrition Analyzer - InfoVis</h1>
     </div>
     <div class="controls" style="width: 56%; text-align: right" >
       <strong id="rendered-count"></strong>/<strong id="data-count"></strong>
