--- a/CPIV/src/index.html
+++ b/CPIV/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>VI - Project</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="d3.v7.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
@@ -60,7 +60,7 @@
     <div> 
   </body>
 
-  <script src="http://underscorejs.org/underscore.js"></script>
+  <script src="underscore.js"></script>
   <script src="script.js"></script>
 
 </html>
